<resources>
    <string name="app_name">StoreUp</string>

    <!--Referencias de LoginActivity-->
    <string name="edtMailSingIn">Email</string>
    <string name="edtPasswordSingIn">Password</string>
    <string name="forgotPasswordSingIn">Forgot password?</string>
    <string name="btnSingIn">Sing In</string>
    <string name="tvCreateAccountSingIn">Create an account</string>
    <string name="register_as_administratorSingIn">Register as administrator?</string>
    <string name="sing_in_administrator">Sing in administrator</string>

    <!--Referencias de fragment createAccount-->
    <string name="btncreateAccount">Create account</string>
    <string name="edtMailCreateAccount">Enter your mail</string>
    <string name="edtPasswordCreateAccount">Enter your password</string>
    <string name="tvMailCreateAccount">Email</string>
    <string name="tvPasswordCreateAccount">Password</string>
    <string name="tvRegisterAccount">Register account</string>

    <!--Referencias itemCategorias-->
    <string name="itemCategoria">Categoria</string>
    <!--Referencias createAccountAdmiActivity-->
    <string name="tvWelcomeAdmi">Welcome as administrator!!</string>
    <string name="tvWelcomeAdmiCreateAccount">Register account as administrator</string>
    <string name="edtNameAdmi">Name</string>
    <string name="btnRegisterAcoount">Register account</string>
    <string name="title_activity_home_admi2">HomeAdmiActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Referencias home admi-->
    <string name="tvNombe">Register name</string>
    <string name="edtNombre">enter name</string>
    <string name="tvHorario">Register time</string>
    <string name="edtHorario">enter time</string>
    <string name="tvPromocion">Register promotion</string>
    <string name="edtPromocion">enter promotions</string>
    <string name="tvUbicacion">Register location</string>
    <string name="tvTypeStoye">Register type store</string>
    <string name="edtUbicacion">enter location link</string>
    <string name="tvProductos">Register products</string>
    <string name="edtProducts">enter your products</string>
    <string name="btnRegisterDates">Register datas</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="about">About</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="itemTypeStore">Store</string>
</resources>