<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.app.storeup.viewmodels.FragmentCreateAccountViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.FragmentCreateAccount">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:cardElevation="100dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#DBFBFB"
            android:elevation="200dp"
            tools:context=".CreateAccountFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/back_x"
                    android:onClick="@{()->model.onBackButtonClick()}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRegisterAccount"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/tvMailCreateAccount"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtMailTextLayoutCreateAccount"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/edtMailCreateAccount"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMailCreateAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:maxLength="40"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:text="@{model.edtName}"
                        android:textSize="12sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/tvPasswordCreateAccount"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtPassTextLayoutCreateAccount"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/edtPasswordCreateAccount"
                    android:textColorHint="@color/black"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassCreateAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:maxLength="40"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:text="@{model.edtMail}"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCreateAccountF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:textStyle="bold"
                    android:layout_marginTop="45dp"
                    android:onClick="@{()->model.registerUser()}"
                    android:background="@drawable/btn_background"
                    android:text="@string/btncreateAccount" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>