<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.app.storeup.viewmodels.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtMailTextLayoutSingIn"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/edtMailSingIn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.38"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{model.mailSingIn}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edtPassTextLayoutSingIn"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/edtPasswordSingIn"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{model.passSingIn}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="30dp"
                    android:autoSizeMinTextSize="12dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/forgotPasswordSingIn"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="0.6"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSingIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/btnSingIn"
                    android:onClick="@{()->model.singIn()}"/>

                <TextView
                    android:id="@+id/tvCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autoSizeMaxTextSize="30dp"
                    android:autoSizeMinTextSize="12dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/tvCreateAccountSingIn"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:targetApi="o" />
            </LinearLayout>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>