<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginAdmiActivity">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:id="@+id/cvLoginAdmi"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:background="@drawable/background_cardview_admi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">
                    <ImageView
                        android:id="@+id/btnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_back"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvWelcomeAdmi"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/linerLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="50dp"
                        android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edtMailTextLayoutSingIn"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edtMailSingIn"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edtPassTextLayoutSingIn"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/edtPasswordSingIn"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autoSizeMaxTextSize="30dp"
                        android:autoSizeMinTextSize="12dp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/forgotPasswordSingIn"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintVertical_bias="0.6"
                        tools:targetApi="o" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSingIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/background_btn_login_admi"
                        android:textColor="@color/black"
                        android:text="@string/btnSingIn" />

                    <TextView
                        android:id="@+id/tvCreateAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autoSizeMaxTextSize="30dp"
                        android:autoSizeMinTextSize="12dp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/tvCreateAccountSingIn"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:targetApi="o" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>