<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.app.storeup.viewmodels.ActivityCreateAccountAdmiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.RegisterAccountAdmiActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/cvLoginAdmi"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@drawable/background_cardview_admi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/arrow_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/tvWelcomeAdmiCreateAccount"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/linerLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical"
                app:cardCornerRadius="20dp"
                app:cardElevation="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="50dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edtLayoutNameAdmi"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconDrawable="@drawable/user"
                        android:hint="@string/edtNameAdmi"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtNameAdmi"
                            android:layout_width="match_parent"
                            android:maxLines="1"
                            android:layout_height="wrap_content"
                            android:text="@={model.edtName}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edtLayoutMailAdmi"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edtMailSingIn"
                        app:startIconDrawable="@drawable/mail_icon"
                        android:layout_marginTop="20dp"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmailAdmi"
                            android:layout_width="match_parent"
                            android:maxLines="1"
                            android:layout_height="wrap_content"
                            android:text="@={model.edtMail}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edtLayoutPassAdmi"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:startIconDrawable="@drawable/pass_icon"
                        android:hint="@string/edtPasswordSingIn"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPasswordAdmi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@={model.edtPass}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSingIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/blu_bajo"
                        android:background="@drawable/background_btn_login_admi"
                        android:text="@string/btnRegisterAcoount"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:onClick="@{()->model.registerAdmi()}"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>